force-app/main/default/objects/Blood_Request__c/Blood_Request__c.object-meta.xml
<CustomObject>
    <label>Blood Request</label>
    <nameField>
        <label>Blood Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blood Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>