force-app/main/default/objects/Blood_Request__c/fields/Attender_contact_number__c.field-meta.xml
<CustomField>
    <fullName>Attender_contact_number__c</fullName>
    <label>Attender contact number</label>
    <type>Phone</type>
</CustomField>