force-app/main/default/objects/Blood_Request__c/fields/Attender_name__c.field-meta.xml
<CustomField>
    <fullName>Attender_name__c</fullName>
    <label>Attender name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>