force-app/main/default/objects/Blood_Request__c/fields/Blood_Req_Id__c.field-meta.xml
<CustomField>
    <fullName>Blood_Req_Id__c</fullName>
    <displayFormat>BR-{000}</displayFormat>
    <label>Blood Req Id</label>
    <type>AutoNumber</type>
</CustomField>