force-app/main/default/objects/Blood_Request__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>guntur</fullName>
            </value>
            <value>
                <fullName>kadapa</fullName>
            </value>
            <value>
                <fullName>kurnool</fullName>
            </value>
            <value>
                <fullName>hyderabad</fullName>
            </value>
            <value>
                <fullName>karimnagar</fullName>
            </value>
            <value>
                <fullName>medchal</fullName>
            </value>
            <value>
                <fullName>chennai</fullName>
            </value>
            <value>
                <fullName>erode</fullName>
            </value>
            <value>
                <fullName>cuddlure</fullName>
            </value>
            <value>
                <fullName>kunnur</fullName>
            </value>
            <value>
                <fullName>kollam</fullName>
            </value>
            <value>
                <fullName>pallakad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>