force-app/main/default/objects/Blood_Request__c/fields/Nature_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Treatment__c</fullName>
    <label>Nature of Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>