force-app/main/default/objects/Blood_Request__c/fields/No_of_units__c.field-meta.xml
<CustomField>
    <fullName>No_of_units__c</fullName>
    <label>No of units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>