force-app/main/default/objects/Blood_Request__c/fields/Patient_name__c.field-meta.xml
<CustomField>
    <fullName>Patient_name__c</fullName>
    <label>Patient Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>