force-app/main/default/objects/Blood_Request__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>anhra pradesh</fullName>
            </value>
            <value>
                <fullName>kerala</fullName>
            </value>
            <value>
                <fullName>tamilnadu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>