force-app/main/default/objects/Blood_Request__c/validationRules/Attender.validationRule-meta.xml
<ValidationRule>
    <fullName>Attender</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Attender_name__c )), ISBLANK( Attender_contact_number__c )  )</errorConditionFormula>
    <errorDisplayField>Attender_contact_number__c</errorDisplayField>
    <errorMessage>Attender name must be there!!</errorMessage>
</ValidationRule>